--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -597,7 +597,8 @@ across 10 cross-validation folds.
 
 \clearpage
 \section{TPR, FPR, and model size for CORELS and other algorithms (NYPD, Feature Set~D)}
-\label{ref:nypd}
+\label{appendix:cpw}
+
 \begin{figure}[b!]
 \begin{center}
 %\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
