--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -75,9 +75,7 @@ in Science, University of California, Berkeley, and hosted by Prof. M.I. Jordan 
 C.D.R. is supported in part by MIT-Lincoln Labs.
 %
 E.A. would like to thank E.~Jonas, E.~Kohler, and S.~Tu for early implementation
-guidance, A.~D'Amour for pointing out the work by~\citet{Goel16},
-M.I.J. for pointing out the work by~\citet{Bertsimas16},
-which influenced the section on algorithmic speedup~(\S\ref{sec:speedup}), V.~Kanade, S.~McCurdy,
+guidance, A.~D'Amour for pointing out the work by~\citet{Goel16}, V.~Kanade, S.~McCurdy,
 J.~Schleier-Smith and E.~Thewalt for helpful conversations, and members of RISELab,
 SAIL, and the UC Berkeley Database Group for their support and feedback.
 %
