Cynthia: update to abstract

--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -1,7 +1,14 @@
 We present the design and implementation of a custom discrete optimization
 technique for building rule lists over a categorical feature space.
 %
-Our algorithm provides the optimal solution, with a certificate of optimality.
+Our algorithm provides
+\begin{kdd}
+the optimal solution,
+\end{kdd}
+\begin{arxiv}
+optimal rule lists according to the regularized empirical risk,
+\end{arxiv}
+with a certificate of optimality.
 %
 By leveraging algorithmic bounds, efficient data structures,
 and computational reuse, we achieve several orders of magnitude speedup in time
