--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -1,13 +1,7 @@
 We present the design and implementation of a custom discrete optimization
 technique for building rule lists over a categorical feature space.
 %
-Our algorithm provides
-\begin{kdd}
-the optimal solution,
-\end{kdd}
-\begin{arxiv}
-optimal rule lists according to the regularized empirical risk,
-\end{arxiv}
+Our algorithm provides optimal rule lists according to the regularized empirical risk,
 with a certificate of optimality.
 %
 By leveraging algorithmic bounds, efficient data structures,
