Mention NYPD dataset in intro

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -193,14 +193,14 @@ CORELS targets large (not massive) problems,
 where interpretability and certifiable optimality are important.
 %
 We illustrate the efficacy of our approach using (1)~the ProPublica COMPAS dataset~\citep{LarsonMaKiAn16}, for the problem of two-year recidivism prediction,
-and (2)~the
+and (2)~stop-and-frisk datasets from the
 \begin{kdd}
-New York Civil Liberties Union (NYCLU)
+New York Civil Liberties Union (NYCLU)~\citep{nyclu:2014},
 \end{kdd}
 \begin{arxiv}
-NYCLU
+NYPD~\citep{nypd} and the NYCLU~\citep{nyclu:2014},
 \end{arxiv}
-2014 stop-and-frisk dataset~\citep{nyclu:2014}, to predict whether a weapon will be found
+to predict whether a weapon will be found
 on a stopped individual who is frisked or searched.
 %
 On these data, we produce certifiably optimal, interpretable rule lists that achieve
