--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -140,7 +140,7 @@ From the original dataset of 45,787 records, each describing an incident involvi
 a stopped person, we identify a subset of 29,595 records for which the individual
 was frisked and/or searched.
 %
-Of these, criminal possession of a weapon was identified in only about 5\% of instances.
+Of these, criminal possession of a weapon was identified in about 5\% of instances.
 %
 Resampling due to class imbalance, for 10-fold cross-validation, yields training sets
 that each contain 50,743 datapoints.
