Cynthia: attempt to correct observations about NYCLU TPR/FPR

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -623,11 +623,11 @@ there were no statistically significant differences in test accuracies across al
 the difference between folds was far larger than the difference between algorithms.
 %
 Figure~\ref{fig:weapon-comparison} shows that for the NYCLU dataset,
-the TPR's across algorithms are similar, while FPR's show more variation;
+logistic regression, SVM, and AdaBoost have the highest TPR's and also the highest FPR's;
 we show TPR and FPR due to class imbalance.
 %
-For this problem, CORELS obtains a TPR that is statistically close to the best performing algorithms,
-while achieving a significantly lower FPR.
+For this problem, CORELS obtains an intermediate TPR, compared to other algorithms,
+while achieving a relatively low FPR.
 %
 We conclude that CORELS produces models whose predictive performance is comparable to or better than
 those found via other algorithms.
